<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <Spinner
        android:layout_height="wrap_content"
        android:id="@+id/spinner_building"
        android:layout_width="140dp"
        android:layout_alignTop="@+id/textView24"
        android:layout_toRightOf="@+id/textView24"
        android:layout_toEndOf="@+id/textView24"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_height="wrap_content"
        android:ems="5"
        android:id="@+id/requestTime"
        android:singleLine="false"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_width="130dp"
        android:layout_alignBottom="@+id/textView23"
        android:layout_alignRight="@+id/spinner_building"
        android:layout_alignEnd="@+id/spinner_building" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText8"
        android:hint=""
        android:background="@android:drawable/editbox_background_normal"
        android:layout_width="130dp"
        android:layout_alignBaseline="@+id/textView22"
        android:layout_alignBottom="@+id/textView22"
        android:layout_alignLeft="@+id/requestTime"
        android:layout_alignStart="@+id/requestTime" />

    <Spinner
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_restaurant"

        android:layout_alignTop="@+id/textView21"
        android:layout_alignLeft="@+id/editText8"
        android:layout_alignStart="@+id/editText8" />

    <Button
        android:text=" Pick A Time"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:background="@color/colorPrimary"
        style="@style/btn_white_large"
        android:layout_width="130dp"
        android:layout_below="@+id/requestTime"
        android:layout_alignRight="@+id/requestTime"
        android:layout_alignEnd="@+id/requestTime" />

    <TextView
        android:text="Delivery Time"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView23"
        android:textAlignment="center"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/editText8"
        android:layout_toLeftOf="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <TextView
        android:text="Delivery Destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView24"
        android:textSize="18dp"
        android:textAlignment="center"


        android:layout_marginTop="37dp"
        android:layout_below="@+id/timePicker"
        android:layout_alignLeft="@+id/textView23"
        android:layout_alignStart="@+id/textView23" />

    <Button
        android:text="make my order!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@+id/spinner_building"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <TextView
        android:text="Restaurant"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView21"
        android:layout_marginTop="98dp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView23"
        android:layout_alignStart="@+id/textView23" />

    <TextView
        android:text="Items You want"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:textAlignment="center"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/spinner_restaurant"
        android:layout_alignLeft="@+id/textView21"
        android:layout_alignStart="@+id/textView21" />

</RelativeLayout>