...
    <TextView
        android:text="Password:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:textSize="20sp" />

    <EditText
        android:layout_width="wrap_content"
...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="8"
        android:id="@+id/editText2"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:background="@android:drawable/editbox_background_normal"
        android:textColorLink="@android:color/holo_blue_light" />

...
        android:layout_marginStart="19dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="enterHome"
        android:layout_marginTop="52dp"
        android:id="@+id/login2"
        android:layout_below="@+id/editText2"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />
</RelativeLayout>
