<resources>
    <string name="app_name">UC San Deliever</string>
    <string name="my_tb_title">This is my toolbar</string>
    <string name="menu_1">option1</string>
    <string name="menu_2">option2</string>
    <string name="menu_3">option3</string>
    <string name="menu_4">option4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="select_restaurant"></string>
    <string-array name="restaurant_names">
        <item>    </item>
        <item>Tapioca</item>
        <item>Burger King</item>
        <item>Panda Express</item>
        <item>Canyon Vista</item>
        <item>Cafe Vetanas</item>
    </string-array>

    <string-array name="SortingOptions">
        <item>Sorting by</item>
        <item>by Item Desired</item>
        <item>by Restaurants</item>
        <item>by Destination</item>
        <item>by Time Needed</item>
    </string-array>

    <string-array name="building_names">
        <item>    </item>

        <item>ERC Europe Hall</item>
        <item>CSE Building</item>
        <item>Geisel</item>
        <item>Library Walk</item>
        <item>Rimac Arena</item>
    </string-array>


    <!-- Chat-->

    <string name="type_msg">Type message</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="displayName">Display Name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="delivered_text">Delivered</string>
    <string name="sending_text">Sending...</string>
    <string name="failed_text">Failed</string>

</resources>
