<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="Your PID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="44dp" />

    <TextView
        android:text="UCSD E-mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:layout_below="@+id/editText6"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="48dp" />

    <TextView
        android:text="Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="8"
        android:id="@+id/editText4"
        android:hint="******"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:background="@android:drawable/editbox_background_normal"
        android:textColorLink="@android:color/holo_blue_light" />

    <Button
        android:text="Sign Up Now!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:id="@+id/button"
        android:onClick="enterHome"
        android:layout_below="@+id/editText4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Your Name"
        android:ems="8"
        android:id="@+id/SUName"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/editText6"
        android:layout_alignStart="@+id/editText6"
        android:textColorLink="@android:color/holo_blue_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="8"
        android:id="@+id/editText6"
        android:hint="Starting With A"
        android:fontFamily="sans-serif"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:textColorLink="@android:color/holo_blue_light" />

    <TextView
        android:text=" "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="8"
        android:id="@+id/editText5"
        android:hint="Used for Login"
        android:background="@android:drawable/editbox_background_normal"
        android:textColorLink="@android:color/holo_blue_light"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4" />

    <TextView
        android:text="Enter Password Again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/textViewRePass"
        android:layout_below="@+id/editText4"
        android:layout_toLeftOf="@+id/editText5"
        android:layout_toStartOf="@+id/editText5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="******"
        android:layout_below="@+id/editText4"
        android:layout_toEndOf="@+id/textViewRePass"
        android:layout_marginTop="21dp"
        android:id="@+id/editTextRePassWord"



        android:ems="8"

        android:background="@android:drawable/editbox_background_normal"
        android:textColorLink="@android:color/holo_blue_light"

        android:layout_toRightOf="@+id/textViewRePass" />

    <TextView
        android:text="Your Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/textViewRePass"
        android:layout_alignStart="@+id/textViewRePass"
        android:layout_marginTop="36dp" />

</RelativeLayout>